# backend-texsan

./: db.sqlite3  manage.py  pyproject.toml
TEXSAN/: asgi.py  settings.py  urls.py  wsgi.py
