[tool.poetry]
name = "texsan-backend"
version = "0.1.0"
description = "backend do site da empresa Texsan"
authors = ["gustavorteuber <gugareis135@gmail.com>"]
readme = "README.md"
packages = [{include = "texsan_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
django-cors-headers = "^3.13.0"
djangorestframework = "^3.14.0"
python-magic = "^0.4.27"
djangorestframework-simplejwt = "^5.2.2"
pillow = "^9.3.0"
decouple = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
